--- a/blog/content/best-things-to-do-in-san-francisco.mdx
+++ b/blog/content/best-things-to-do-in-san-francisco.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The 10 Best Things to Do in San Francisco"
+title: "시작하기"
 description: " San Francisco is a city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. It’s known for its year-round fog, iconic Golden Gate Bridge, cable cars and colorful Victorian houses. The Financial District’s Transamerica Pyramid is its most distinctive skyscraper. In the bay sits Alcatraz Island, site of the notorious former prison."
 date: "2019-10-10"
 ---
