--- a/blog/content/re100run-begin.mdx
+++ b/blog/content/re100run-begin.mdx
@@ -13,7 +13,7 @@ date: "2023-03-10"
 확인할 수 있습니다. 이를 통해  에너지 생산의 어려움과 에너지의 소중함을 알리기 위해 
 본 프로젝트를 기획하게 되었습니다.
 
-
+[image]
 ## 2. 6000kw
 
 본 프로젝트는 11월 한달간 5회 오프라인 프로그램진행 하였습니다.
