--- a/blog/content/re100run-begin.mdx
+++ b/blog/content/re100run-begin.mdx
@@ -5,7 +5,9 @@ description: " 기존의 일반적인 환경 러닝 캠페인보다 환경의식
 date: "2023-03-10"
 ---
 
-# 1. 두런두런 넥스트
+![image](../../Funding.png)
+
+### 1. 두런두런 넥스트
 
 에너지러닝은 기존 이타서울에서 진행 되었던  두런두런 캠페인을 바탕으로 
 이타서울에서 폐 전자제품과 재활용품을 활용하여 직접 제작한 Iot (사물인터넷) v 풍력발전기를 들고 짝꿍과 함께v  달리는 러닝 프로그램입니다.v 
@@ -13,13 +15,13 @@ date: "2023-03-10"
 확인할 수 있습니다. 이를 통해  에너지 생산의 어려움과 에너지의 소중함을 알리기 위해 
 본 프로젝트를 기획하게 되었습니다.
 
-[image]
-## 2. 6000kw
+
+### 2. 6000kw
 
 본 프로젝트는 11월 한달간 5회 오프라인 프로그램진행 하였습니다.
 총 30명의 러너가 참여하였으며 누적 거리 20km를 달성하며 풍력발전기를 통해 생산된 전기 에너지 생산량은  6000kw 생산하였습니다.
 또한 ※코로나19 방역 수칙에 준거하여 참여자들의 손 소독 후 간격을 두고 띄어 러닝이 진행하였습니다.
 
-## 3. 폐전자제품인 안마의자 모터와 폐 페트병
+### 3. 폐전자제품인 안마의자 모터와 폐 페트병
 
  직접 러닝을 하며 에너지 절약의 필요성과 에너지 생산의 어려움을 깨달고자 기획하였습니다. 또한 최근 환경적인 문제인  폐전자제품들의 교체시기가 빨라지고 재활용이 어렵다는 환경적 문제가 발생하고있습니다. 이를 해결하기 위해 버려진 폐전자제품인 안마의자 모터와 폐 페트병과 같은 재활용품등을 활용하여 iot풍력발전기 제작하며 문제를 해결할 수 있는 방안과 문제의식을 전하고자 노력하였습니다. 
