--- a/blog/content/future-development.mdx
+++ b/blog/content/future-development.mdx
@@ -1,5 +1,38 @@
 ---
-title: "The future of CSS in JS"
-description: "CSS in JS is a hot topic in the React community. Here are some of the most popular solutions and what the future might hold for CSS in JS."
+title: "오래된, 첨단"
+description: "기술의 발전이 가속화 될 수록 해당 기술의 수명주기는 점차 짧아지고 있습니다. 수명이 다한 기술은 폐기물로 바뀌어 미래세대에게 온전히 돌아갑니다. 유엔 보고서는 2019년 전 세계에서 발생한 전자 폐기물은 5,360만 톤으로 1인당 7.3kg에 해당하며, 2030년까지 7,470만 미터톤에 이를 것으로 예상합니다. 이는 불과 11년 만에 39% 증가한 수치 입니다"
 date: "2020-01-22"
 ---
+
+### 표준화 그리고 사양화
+
+![img](../../re100run/problem/1.png)
+
+기술의 발전이 가속화 될 수록 해당 기술의 수명주기는 점차 짧아지고 있습니다. 수명이 다한 기술은 폐기물로 바뀌어 미래세대에게 온전히 돌아갑니다. 유엔 보고서는 2019년 전 세계에서 발생한 전자 폐기물은 5,360만 톤으로 1인당 7.3kg에 해당하며, 2030년까지 7,470만 미터톤에 이를 것으로 예상합니다. 이는 불과 11년 만에 39% 증가한 수치 입니다. 
+
+당시의 첨단 기술 이었던 VCR 비디오 산업의 모터는 전자 폐기물의 주요 구성 중 하나입니다. 전원 코드, 변압기 및 커패시터 등 구성 요소는 납, 카드뮴 및 수은과 같이 환경 및 인체 건강에 유해한 물질로 만들어집니다. 또한 플라스틱 외피와 VCR 플레이어의 기타 부품도 전자 폐기물 총량에 기여합니다. 이는 현재 폐기되며 전자 폐기물의 증가하는 글로벌 문제에 기여합니다. 
+
+전자 폐기물은 특정 지역이나 국가에 국한되지 않는 우리의 즉각적인 관심과 조치가 필요한 세계적인 문제이며, 우리는 책임감 있는 전자 폐기물 처리의 중요성을 인식하고 미래 세대를 위해 자원과 환경을 보호하기 위한 지속 가능한 엔지니어링을 고려해야 합니다. 
+
+
+
+
+![img](../../re100run/problem/2.png)
+
+### 표준화의 문제점과 난제들
+
+이타서울 팀은 22년 7월 증가하는 전자 폐기물 문제를 접근하며, 메세지 캠페인 대신 오래된 VCR 모터를 업사이클링과 리버스 엔지니어링 과정을 거치는 비영리 연구 프로젝트를 진행했습니다. 우리는 VCR 모터의 표준화된 사양을 분석하고, 이를 기반으로 VCR 모터의 구성 요소를 분해하고, 이를 통해 VCR 모터의 구성 요소를 재사용할 수 있는 일련의 방법을 모색했습니다. 
+
+큰 난제는  *특정 환경(VCR)에 표준화* 된 요소들을 범용으로 바꾸는 과정 였습니다. VCR 모터는 해당 산업의 특성을 반영하고 있으며, 이는 전압, 회로 등 기존 특성을 벗어나는 다른 산업의 적용와 응용을 어렵게 만듭니다. 
+
+
+
+
+![img](../../re100run/problem/3.png)
+![img](../../re100run/problem/4.png)
+
+### 테크니컬 에너지 캠페인 - RE100.RUN
+
+이타서울 팀은 본 비영리 기술연구 프로젝트가 일련의 테크니컬 캠페인을 통해 각 분야에 독특한 메세지를 전달 할 수 있다고 봅니다. 캠페인 참가자은 소형 풍력 터빈을 들고 달리며  운동으로 에너지를 생산하는 경험과 이를 온라인을 통해 메세지를 전달합니다. 재생 에너지원의 사용을 촉진하고 전자 폐기물을 줄이기 위한 동참과 개개인의 노력을 결합함으로써 우리는 보다 지속 가능한 미래의 메세지를 만들 수 있습니다. 
+
+
