--- a/blog/content/how-to-join.mdx
+++ b/blog/content/how-to-join.mdx
@@ -1,14 +1,41 @@
 ---
-title: "캠페인 참여방법"
-description: "가로등이 없는 구간은 LOT 풍력발전기를 통"
+title: "RE100.Run 캠페인"
+description: "RE100.Run 캠페인은 참가자들이 직접 에너지 발전 러닝의 노력을 모아, 재생 에너지원 사용 촉진과 폐기물 저감의 효과적 메세지를 확산하는 것을 목표로 합니다."
 date: "2023-03-08 08:32:00"
 ---
 
-## 1. 참여방법
+## 미션
 
-프로그램을 진행 전  참여자분들에게 안내문자를 통해 준비물과 집결지를 미리 사전에 공지하였습니다. 
-저희의 코스는 여의도 한강공원을 출발하여 ~한강철교를 반환하여 다시 돌아오는 코스이며 총 4km 구간을 러닝을 하였습니다. 또한 러닝을 처음 입문한 참가자를 위해  1km/10분 페이스로 러닝을 진행하였습니다. 러닝 스트레칭 쿨다운 등을 포함해 약 1시간 30분 정도가 소요되었습니다. 
+*RE100RUN* 캠페인은 참가자들이 직접 에너지 발전 러닝의 노력을 모아, 재생 에너지원 사용 촉진과 폐기물 저감의 효과적 메세지를 확산하는 것을 목표로 합니다. 
 
-## 2. 6000kw
 
-마지막으로 기존 한강을 러닝하면서 가로등이 없는 구간은 LOT 풍력발전기를 통해 해결할 수 있음. 이를 들고 뜀으로써 한강트랙에 가로등이 없는 곳을 자가 빛 발전기로 인해 주변을 밝혀줌으로써 사고 예방을 할 수 있었습니다. 발전기를 들고 뛰는 러너는 트랙의 사이드에서 뜀으로써 대열유지와 자전거 및 다른 러닝 크루와의 충돌사고를 예방
+![img](../../re100run/join/1.png)
+
+
+## 1. 참여방법(예시)
+
+1) "RE100RUN" 캠페인에 가입하고 운동할 때 휴대할 수 있는 작은 풍력 터빈을 받으세요.
+2) 달리거나 걷는 지정된 경로에서 풍력 터빈의 움직임을 통해 에너지 생성을 시작합니다.
+3) 에너지 생산기록은 `re100.run` 사이트를 통해 저장합니다.
+4) 에너지 달성량을 지역 환경단체나 도움이 필요한 이웃에 기부하세요. 
+5) 해시태그 #RE100RUN을 사용하여 소셜 미디어에서 경험을 공유하여 다른 사람들이 re100.run 의 메세지에 공감하도록 영감을 주세요.
+
+
+![img](../../re100run/join/2.png)
+
+### 에너지 생산량은 어떻게 측정되나요?
+ 1.3 ~ 3.7V , 0.5A ~ 0.8A 의 에너지가 생산됩니다. 이는 실시간으로 서버에 기록되며 *re100.run* 사이트를 통해 공개 됩니다.
+
+
+### 카드뉴스자료
+![img](../../re100run/join/card01.png)
+![img](../../re100run/join/card02.png)
+![img](../../re100run/join/card03.png)
+![img](../../re100run/join/card04.png)
+![img](../../re100run/join/card05.png)
+![img](../../re100run/join/card06.png)
+![img](../../re100run/join/card07.png)
+![img](../../re100run/join/card08.png)
+![img](../../re100run/join/card09.png)
+
+
