--- a/blog/content/how-to-join.mdx
+++ b/blog/content/how-to-join.mdx
@@ -27,6 +27,13 @@ date: "2023-03-08 08:32:00"
  1.3 ~ 3.7V , 0.5A ~ 0.8A 의 에너지가 생산됩니다. 이는 실시간으로 서버에 기록되며 *re100.run* 사이트를 통해 공개 됩니다.
 
 
+![img](../../re100run/join/3.png)
+![img](../../re100run/join/4.png)
+### 21한강몽땅
+ - 코로나로 취소
+
+
+
 ### 카드뉴스자료
 ![img](../../re100run/join/card01.png)
 ![img](../../re100run/join/card02.png)
